# oss.FCL.sf.os.kernelhwsrv

./: .hgtags  README.md  anywhere.txt  build.config.xml  package_definition.xml  package_definition_2.0.1.xml  package_map.xml
kernel/eka/: CMakeLists.txt  base.bld  base_e32.history.xml  base_e32.mrp  bld.inf  configure.pl  doit.cmd  generic.inf  release.txt  release_old.txt  tests.cmd
kernel/eka/blike/: ekern.def
kernel/eka/bmarm/: 7.0-euseru.def  btracecu.def  dma2u.def  dmau.def  econs.def  edisp.def  eka1_entry_stub.def  ekdata.def  ekernsmp.def  ekernu.def  ektran.def  elocdu.def  eloclu.def  emmcptn.def  epbusmu.def  epbusu.def  euser-7_0{00000000}.def  euseru.def  ewsrvu.def  exadc.def  exmisc.def  exmoncommonu.def  hcru.def  iicu.def  kdebugU.def  lddu.def  ostuserstubbedu.def  resman.def  resmanextended.def  rpipeu.def  rpmbextu.def  usbccu.def  usbcscu.def  utraceuserstubbedu.def
kernel/eka/bwins/: btracecu.def  econs.def  edisp.def  ekdata.def  ekernu.def  ektran.def  elocdu.def  emmcptn.def  emulatoru.def  epbusmu.def  euseru.def  hcru.def  lddu.def  ostuseru.def  resman.def  resmanextended.def  rpipeu.def  rpmbextu.def  utraceuserstubbedu.def
kernel/eka/bx86/: btracecu.def  econs.def  ekernsmp.def  ekernu.def  elocdu.def  eloclu.def  emmcptn.def  epbusmu.def  euseru.def  exmoncommonu.def  kdebugu.def  ostuserstubbedu.def  rpipeu.def  rpmbextu.def  utraceuserstubbedu.def
kernel/eka/bx86gcc/: ekernsmp.def  ekernu.def  euseru.def  utraceuserstubbedu.def
kernel/eka/common/: alloc.cpp  array.cpp  common.h  debugfunction.cpp  des16.cpp  des8.cpp  gcchelp.cpp  heap.cpp  heap_hybrid.cpp  mem.cpp  secure.cpp
kernel/eka/common/arm/: armcchlp.cia  armcchlp.cpp  atomic_32_v6.h  atomic_64_exec.h  atomic_64_v6_v5.h  atomic_64_v6k.h  atomic_8_16_32_exec.h  atomic_8_16_32_irq.h  atomic_8_16_v6.h  atomic_ops.h  atomics.cia  carray.cia  cdes16.cia  cdes8.cia  cgcchelp.cia  cgcchelp.cpp  cheap.cia  cmem.cia  gccehlp.cpp
kernel/eka/common/win32/: atomic_skeleton.h  atomics.cpp  cmem.cpp  seh.cpp  seh.h
kernel/eka/common/x86/: atomic_skeleton.h  atomics.cia  cmem.cia
kernel/eka/compsupp/: ARM EABI LICENCE.txt  base_e32_compsupp.mrp  bld.inf  compsupp.iby  rvct.h
kernel/eka/compsupp/aehabi/: Readme  cxxabi.h  symbian-notes.txt
kernel/eka/compsupp/eabi/: dfpaeabiu.def  udfpu.def  (+10 more)
kernel/eka/eabi/: btracecu.def  dma2u.def  dmau.def  econs.def  edisp.def  ekdata.def  ekernsmp.def  ekernu.def  ektran.def  elocdu.def  eloclu.def  emmcptn.def  emptyu.def  epbusmu.def  epbusu.def  euseru.def  exadc.def  exmisc.def  exmoncommonu.def  hcru.def  iicu.def  kdebugu.def  lddu.def  ostuseru.def  resman.def  resmanextended.def  rm_debug_extu.def  rpipeu.def  rpmbextu.def  sm_debugu.def  usbccu.def  usbcscu.def  usbdescriptorsu.def  usbdi_utilsu.def  usbhostu.def
kernel/eka/euser/: CMakeLists.txt  base_e32_euser.mrp  bld.inf  edll.mmp  eexe.mmp  eexe_instrumented_heap.mmp  eexe_monitor_heap.mmp  emulator.mmp  epoc.mmp  estub.mmp  euser.mmh  euser.mmp  euser_lib.mmp  euser_v4.mmp  euser_v5.mmp  euser_v6.mmp  euser_v6k.mmp  euser_v6k_smp.mmp  euser_v7_smp.mmp  locmapping.cpp  locmapping.h  rpipe.cpp  rpipe.mmp  scppnwdl.mmp  scppnwdl_kern.mmp  us_data.h  us_decode.cpp  us_des.cpp  us_encode.cpp  us_evnt.cpp  us_exec.cpp  us_func.cpp  us_gcc.cpp  us_graph.cpp  us_hand.cpp  us_htab.cpp  us_ksvr.cpp  us_lex16.cpp  us_lex8.cpp  us_loc.cpp  (+17 more)
kernel/eka/ewsrv/: base_e32_ewsrv.mrp  bld.inf  co_cli.cpp  co_twin.cpp  co_utl.cpp  econs.mmp  ektran.mmp  ewsrv.mmp  ky_capt.cpp  ky_tran.cpp  ws_dat.cpp  ws_main.cpp  ws_utl.cpp  ws_win.cpp
kernel/eka/extension/: base_rvct_common.mk  bld.inf  bootstrap.flm  bootstrap.mk  bootstrap.xml  config.mk  copy_default.mk  genexec.mk  rom.flm  rom.xml
kernel/eka/include/: arm_vfp.h  byte_pair_compress.h  collate.h  cpudefs.h  d32btrace.h  d32camerasc.h  d32camerasc.inl  d32comm.h  d32comm.inl  d32ethernet.h  d32ethernet.inl  d32fir.h  d32locd.h  d32locd.inl  d32otgdi.h  d32otgdi.inl  d32otgdi_errors.h  d32public.h  d32resmanus.h  d32resmanus.inl  d32soundsc.h  d32soundsc.inl  d32usbc.h  d32usbc.inl  d32usbcsc.h  d32usbcsc.inl  d32usbcshared.h  d32usbcshared.inl  d32usbdescriptors.h  d32usbdi.h  d32usbdi.inl  d32usbdi_errors.h  d32usbdi_hubdriver.h  d32usbdi_hubdriver.inl  d32usbtransfers.h  d32video.h  d32video.inl  dispchannel.h  dispchannel.inl  dla.h  (+93 more)
kernel/eka/kernel/: CMakeLists.txt  array_eabi.cpp  byte_pair.cpp  crash_gzip.cpp  crashdebug_gzip.cpp  crashlog_gzip.cpp  device.cpp  edev.mmp  eext.mmp  ekern.mmp  ekern_lib.mmp  ekll.mmp  emi.cpp  evar.mmp  eventq.cpp  evfp.mmp  execs.txt  exmoncommon.mmp  exmoncommon_lib.mmp  exmondebug.mmp  exmonlog.mmp  exstart.cpp  exstart.mmp  genexec.pl  kc_exe.mmp  kdebug.cpp  kdebug.mmp  kdebugv6.mmp  kern_ext.mmh  kern_int.mmh  kerncorestats.cpp  notifier.cpp  object.cpp  objectix.cpp  power.cpp  random.cpp  sbtrace.cpp  scodeseg.cpp  securerng.cpp  server.cpp  (+21 more)
kernel/eka/klib/: bma.cpp  dbase.cpp  kdes8.cpp  kheap.cpp
kernel/eka/memmodel/: memmodel.mmp
kernel/eka/nkern/: dfcs.cpp  nk_exe.mmp  nk_mon.cpp  nk_old.cpp  nk_timer.cpp  nkern.cpp  nkern.mmp  nkern_ext.mmh  nkern_int.mmh  nkern_sa.mmp  nkerns.cpp  nklib.cpp  sched.cpp
kernel/eka/nkernsmp/: dfcs.cpp  nk_bal.cpp  nk_bal.h  nk_exe.mmp  nk_irq.cpp  nk_mon.cpp  nk_timer.cpp  nkern.cpp  nkern.mmp  nkern_ext.mmh  nkern_int.mmh  nkern_sa.mmp  nkerns.cpp  sched.cpp
kernel/eka/rombuild/: PlatSecDiagnostics.oby  PlatSecEnforcement.oby  alltests.oby  autoexec_smpsoak.bat  autotest.oby  autotest_e32tests.oby  autotest_f32tests.oby  base.iby  benchmark.oby  bldnktest.cmd  bootldr.oby  bootx86.bat  bootx86d.bat  btrace.iby  copyx86.bat  cptest.pl  e32tests.oby  f32_perf_tests.oby  f32_perf_tests_fat_exfat.oby  f32tests.oby  h2usbtest.iby  h2usbtest.oby  h4usbmmctest_load.oby  h4usbmmctest_test.oby  h4usbstress.oby  h4usbtest.iby  h4usbtest.oby  hdd.vmdk  hdd.vmx  hsusbtest.iby  hsusbtest.oby  kernel.hby  ldrtest.oby  minimal.oby  mmctest_load.oby  mmctest_load_rel.oby  mmctest_test.oby  mmctest_test_e32tests.oby  mmctest_test_f32tests.oby  multiver.oby  (+53 more)
(+6225 files in other folders)
